# groklog

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
groklog/: __init__.py  app.py  args.py  process_filter.py  shell.py  terminal.py
groklog/filter_manager/: __init__.py  exceptions.py  filter.py  filter_manager.py
groklog/filter_model/: __init__.py  filter.py  filter_model.py
groklog/process_node/: __init__.py  base.py  generic_process.py  shell_process.py
groklog/ui/: __init__.py  app.py  base_app.py  command_text_box.py  filter_creator.py  filter_viewer.py  streaming_text_box.py  terminal.py  theming.py
groklog/ui/scenes/: __init__.py  app.py  base_app.py  filter_creator.py  scene_names.py
logify/: __init__.py
tests/: conftest.py  test_filter_model.py  test_filter_viewer.py  test_process_node.py  test_process_trees.py  test_shell_process.py
tests/utils/: __init__.py  patterns.py  process_validation.py  queuing.py  thread_validation.py
