[tool.poetry]
name = "groklog"
version = "0.1.0"
description = "A tool for filtering logs quickly and easily"
authors = ["Alex Thiel <apocthiel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.13.0"
asciimatics = "^1.13.0"
pubsus = "^0.1.1"

[tool.poetry.dev-dependencies]
# Pre-Commit
pytest = "^6.2.4"
black = "^21.6b0"
isort = "^5.9.1"

[tool.poetry.scripts]
groklog = "groklog:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
